--- a/css/main.css
+++ b/css/main.css
@@ -12,3 +12,14 @@ html,body{
   background-size: 120px;
   background-repeat: repeat;
 }
+
+.game-board{
+	margin-left: auto;
+    margin-right: auto;
+    margin-top: 10vw;
+    height: 450px;
+    width: 450px;
+    border: black solid;
+    border-width: 30px;
+    border-radius: 50%;
+}
