keep all overflows hidden

--- a/css/main.css
+++ b/css/main.css
@@ -22,13 +22,13 @@ html,body{
     border: black solid;
     border-width: 30px;
     border-radius: 50%;
+    overflow: hidden;
 }
 
 .board-inner {
     margin-left: auto;
     height: 390px;
     width: auto;
-    border-radius: 50%;
     border: 0;
     position: relative;
     text-align: center;
