--- a/css/main.css
+++ b/css/main.css
@@ -34,3 +34,13 @@ html,body{
     text-align: center;
     background-color: #333;
 }
+
+.hr-plates {
+    margin-top: 0px;
+    margin-bottom: 20px;
+    height: 185px;
+    border: 0;
+    position: relative;
+    background-color: #00a74a;
+}
+
