--- a/css/main.css
+++ b/css/main.css
@@ -25,4 +25,33 @@ html,body{
     overflow: hidden;
 }
 
+.quadrant {
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+    display: inline-block;
+    height: 196px;
+    width: 193px;
+}
+
+.top-left {
+  border-top-left-radius: 100%;
+  border-left-width: 2px;
+}
+
+.top-right {
+  border-top-right-radius: 100%;
+  border-right-width: 2px;
+}
+
+.bottom-left {
+  border-bottom-left-radius: 100%;
+  border-left-width: 2px;
+}
+
+.bottom-right {
+  border-bottom-right-radius: 100%;
+  border-right-width: 2px;
+}
+
 
