--- a/css/main.css
+++ b/css/main.css
@@ -92,4 +92,16 @@ html,body{
 	background: #3677bd;
 }
 
+.switch-board {
+    position: absolute;
+    height: 225px;
+    width: 221px;
+    border: black solid;
+    border-width: 30px;
+    border-radius: 50%;
+    margin-top: -311px;
+    margin-left: 80px;
+    overflow: hidden;    
+}
+
 
