--- a/css/main.css
+++ b/css/main.css
@@ -105,11 +105,15 @@ html,body{
     background: #d2d2d2;  
 }
 
-.switch-board p {
-    margin-top: 30px;
-    margin-left: 30px;
+.switch-b-in {
+	margin-top: 30px;
+	margin-left: 30px
+}
+
+.switch-b-in p {
     font-weight: bolder;
     font-size: 45px;
 }
+
 
 
