include frame for counting digit screen

--- a/css/main.css
+++ b/css/main.css
@@ -115,5 +115,18 @@ html,body{
     font-size: 45px;
 }
 
+.count-block {
+	display: inline;
+}
+
+.counting-block {
+	border: black solid;
+    border-width: 4px;
+    border-radius: 10px;
+    width: 55px;
+    height: 40px;
+}
+
+
 
 
