small font for count label

--- a/css/main.css
+++ b/css/main.css
@@ -123,8 +123,8 @@ html,body{
 
 .count-block span{
     font-weight: bold;
-    font-size: 14px;
-    margin-left: 2px;
+    font-size: 11px;
+    margin-left: 10px
 }
 
 .counting-block {
