--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,7 @@ html,body{
     border: 4px solid #444;
     box-shadow: 0px 2px 3px #222;
     margin: auto;
+    cursor: pointer;
 }
 
 .counting-block {
