--- a/css/main.css
+++ b/css/main.css
@@ -154,6 +154,7 @@ html,body{
     box-shadow: 0px 2px 3px #222;
     margin: auto;
     cursor: pointer;
+    pointer-events: auto;
 }
 
 .counting-block {
