--- a/css/main.css
+++ b/css/main.css
@@ -157,6 +157,14 @@ html,body{
     pointer-events: auto;
 }
 
+
+.round-btn:active {
+	
+	border: 4px solid #444;
+    box-shadow: 0px 3px 3px #222;
+    top: 1px;
+}
+
 .counting-block {
 	border: black solid;
     border-width: 4px;
