turn on led when strict button is clicked

--- a/css/main.css
+++ b/css/main.css
@@ -201,6 +201,10 @@ html,body{
     top: 90px;
 }
 
+.led-on {
+	background-color: red;
+}
+
 .label {
 	display: inline-block;
     margin-left: 11px;
